# main/http_server/axe-os/src/app/services/system.service.ts
@@ -182,6 +182,11 @@ export class SystemApiService {
         overclockEnabled: 1,
         asicFastUart: 0,
         autotuneVoltage: 0,
+        useStaticFallback: 0,
+        staticIp: "",
+        staticGateway: "",
+        staticSubnet: "255.255.255.0",
+        staticDns: "",
         useCustomWWW: 0 as const,
         runningPartition: "factory",
         minFanSpeed: 25,
